added link to github

--- a/index.html
+++ b/index.html
@@ -72,5 +72,8 @@
       </div>
     </div>
     <script src="./src/index.js"></script>
+    <a href="https://github.com/intuppa/My-project">
+      Open Source Code by Ingrid Bygnes
+    </a>
   </body>
 </html>
